metadatafullcopy/unpackaged/objects/AE_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>AE1__c</fullName>
        <formula>IF( Name = ( Billing_Forecast__r.ATI_Job__r.Account_Executive_1__r.FirstName  &amp; &quot; &quot; &amp; Billing_Forecast__r.ATI_Job__r.Account_Executive_1__r.LastName), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AE2__c</fullName>
        <formula>IF( Name = ( Billing_Forecast__r.ATI_Job__r.Account_Executive_2__r.FirstName &amp; &quot; &quot; &amp; Billing_Forecast__r.ATI_Job__r.Account_Executive_2__r.LastName), TRUE, FALSE)</formula>
        <label>AE2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Forecast</label>
        <referenceTo>Forecast__c</referenceTo>
        <relationshipLabel>AE Forecasts</relationshipLabel>
        <relationshipName>AE_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <formula>Billing_Forecast__r.Revenue_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Date__c</fullName>
        <formula>Billing_Forecast__r.Invoice_Date__c</formula>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formula_Text_1__c</fullName>
        <formula>IF( OwnerId = $User.Id, TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Text 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula_Text_2__c</fullName>
        <formula>IF(OR($User.Id = OPID__c, $User.Id = OwnerId),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Text 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPID__c</fullName>
        <formula>IF ( UserRole__c = &quot;Marketing (Corporate-Env)&quot;, &quot;00570000001bzaI&quot;, 
IF ( UserRole__c = &quot;Marketing (Denver)&quot;, &quot;00570000001bzao&quot;, 
IF ( UserRole__c = &quot;Marketing (Sacramento)&quot;, &quot;00570000001bzao&quot;, 
IF ( UserRole__c = &quot;Marketing (San Francisco)&quot;, &quot;00570000001bzao&quot;, 
IF ( UserRole__c = &quot;Marketing (Seattle)&quot;, &quot;00570000001bzao&quot;, 
IF ( UserRole__c = &quot;Marketing (Dallas)&quot;, &quot;00570000002RZF0&quot;, 
IF ( UserRole__c = &quot;Marketing (Houston)&quot;, &quot;00570000002RZF0&quot;, 
IF ( UserRole__c = &quot;Marketing (Phoenix)&quot;, &quot;00570000002RZF0&quot;, 
IF ( UserRole__c = &quot;Marketing (Tucson)&quot;, &quot;00570000002RZF0&quot;, 
IF ( UserRole__c = &quot;Marketing (Chicago)&quot;, &quot;00570000004RKzJ&quot;, 
IF ( UserRole__c = &quot;Marketing (New England)&quot;, &quot;00570000004RKzJ&quot;, 
IF ( UserRole__c = &quot;Marketing (Philadelphia)&quot;, &quot;00570000004RKzJ&quot;, 
IF ( UserRole__c = &quot;Marketing (Tampa)&quot;, &quot;00570000004RKzJ&quot;, 
IF ( UserRole__c = &quot;Marketing (Las Vegas)&quot;, &quot;00570000002P8Yt&quot;, 
IF ( UserRole__c = &quot;Marketing (Los Angeles)&quot;, &quot;00570000002P8Yt&quot;, 
IF ( UserRole__c = &quot;Marketing (Riverside)&quot;, &quot;00570000002P8Yt&quot;, 
IF ( UserRole__c = &quot;Marketing (San Diego)&quot;, &quot;00570000002P8Yt&quot;, 
IF ( UserRole__c = &quot;Marketing (Corporate)&quot;, &quot;00570000002P8Yt&quot;, 
IF ( UserRole__c = &quot;Marketing (Managed Repair Program)&quot;, &quot;00570000005Qilh&quot;, 
&quot;&quot; )))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Split_Amount__c</fullName>
        <formula>Billing_Forecast__r.Forecast_Split_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Split Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserRole</label>
        <type>Text</type>
    </fields>
    <label>AE Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Forecast_Date__c</columns>
        <columns>Billing_Forecast__c</columns>
        <columns>AE1__c</columns>
        <columns>AE2__c</columns>
        <columns>Revenue_Split_Amount__c</columns>
        <columns>Forecast_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Jacqueline Nishnic</value>
        </filters>
        <filters>
            <field>Forecast_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2018</value>
        </filters>
        <filters>
            <field>Forecast_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2018</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Executive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>